# sinks-2

./: CMakeLists.txt  LICENSE.md  README.md
include/: solver.h
src/: main.cpp  solver.cpp
